# jambajuice

./: README.md  language  language.txt  p2.jj  p6.jj
jamba/: CHANGELOG.md  README.md  jamba.cabal  package.yaml
jamba/.stack-work/: stack.sqlite3
jamba/src/: AST.hs  Desugar.hs  Eval.hs  Lexer.hs  Lexer.x  Lexer2.hs  Lexer2.x  Main  Main.hi  Main.hs  Parser.hs  Parser.y  Parser2.hs  Parser2.info  Parser2.y
jamba/tests/: runtests.sh
jamba2/: CHANGELOG.md  README.md  jamba2.cabal  runtests.sh
jamba2/.stack-work/: stack.sqlite3
jamba2/prolog/: PLCgen  PLCgen.hi  PLCgen.hs  emily_notes.pl  epilogue.pl  supv2.pl  test.pl  test_let.pl
jamba2/prolog/templateFiles/: dummy.pl  prologue.pl
jamba2/src/: AST.hs  ASTA.hs  AnnotatedAST.hs  Eval.hs  Lexer.hs  Main.hs  PLCgen.hs  Parser.hs  PrologParser.hs  contraint-results.pl  typing-constraints.pl
jamba2/src/templateFiles/: epilogue.pl  prologue.pl
jamba2/tests/: p10.failing  p10.jj  p11.jj  p12.jj  p13.jj  p14-failing.jj  p15.jj  p16.jj  p17.failing  p18.jj  p2.jj  p20.jj  p3.jj  p4.jj  p5.jj  p6.jj  p7.jj  p8.jj  p9-failing.out  prolog.test
jambda/: README.md  package.yaml
jambda/plc/: Main.hs
jambda/src/: Lexer.x  Parse.hs  Parser.y
lambda/: lambda.cabal  stack.yaml
lambda/.stack-work/: stack.sqlite3
lambda/plc/: Main.hs
lambda/src/: AST.hs  HW.hs  Parse.hs
lambda/tests/: runtests.sh
notes-n-ref/: hm_rules_to_prolog.md  library.txt  main.md  supv2.md  test_let.md
prolog/: PLCgen.hs  README.md  main.pl  recursion-test-ex.pl  test.pl-contraint-results.pl  test.pl-typing-constraints.pl  test2.pl
(+83 files in other folders)
